# internal/docs/swagger.json
@@ -1,11 +1,21 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample server for a Go.",
+        "title": "Go Playground API",
+        "contact": {},
+        "version": "0.0.1"
     },
+    "host": "localhost:3000",
+    "basePath": "/api",
     "paths": {
-        "/api": {
+        "/": {
             "get": {
+                "security": [
+                    {
+                        "OAuth2ImplicitGoogle": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -32,7 +42,7 @@
                 }
             }
         },
-        "/api/auth/{provider}": {
+        "/auth/{provider}": {
             "get": {
                 "description": "Initiates authentication with a specified third-party provider and returns user information upon success.",
                 "consumes": [
@@ -61,13 +71,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.gothUser"
+                            "$ref": "#/definitions/server.User"
                         }
                     }
                 }
             }
         },
-        "/api/auth/{provider}/callback": {
+        "/auth/{provider}/callback": {
             "get": {
                 "description": "This endpoint is the callback URL for Google authentication.",
                 "consumes": [
@@ -96,7 +106,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/goth.User"
+                            "$ref": "#/definitions/server.User"
                         }
                     },
                     "403": {
@@ -108,7 +118,7 @@
                 }
             }
         },
-        "/api/auth/{provider}/logout": {
+        "/auth/{provider}/logout": {
             "get": {
                 "description": "Logs out the user from the current session by clearing authentication cookies or tokens, then redirects to the home page.",
                 "consumes": [
@@ -143,7 +153,7 @@
                 }
             }
         },
-        "/api/users": {
+        "/users": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -179,6 +189,9 @@
                 "createdAt": {
                     "type": "string"
                 },
+                "email": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -190,7 +203,7 @@
                 }
             }
         },
-        "goth.User": {
+        "server.User": {
             "type": "object",
             "properties": {
                 "accessToken": {
@@ -202,25 +215,13 @@
                 "avatarURL": {
                     "type": "string"
                 },
-                "description": {
-                    "type": "string"
-                },
                 "email": {
                     "type": "string"
                 },
                 "expiresAt": {
                     "type": "string"
                 },
-                "firstName": {
-                    "type": "string"
-                },
                 "idtoken": {
-                    "type": "string"
-                },
-                "lastName": {
-                    "type": "string"
-                },
-                "location": {
                     "type": "string"
                 },
                 "name": {
@@ -232,14 +233,7 @@
                 "provider": {
                     "type": "string"
                 },
-                "rawData": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
                 "refreshToken": {
-                    "type": "string"
-                },
-                "userID": {
                     "type": "string"
                 }
             }
@@ -252,60 +246,6 @@
                 }
             }
         },
-        "server.gothUser": {
-            "type": "object",
-            "properties": {
-                "accessToken": {
-                    "type": "string"
-                },
-                "accessTokenSecret": {
-                    "type": "string"
-                },
-                "avatarURL": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "expiresAt": {
-                    "type": "string"
-                },
-                "firstName": {
-                    "type": "string"
-                },
-                "idtoken": {
-                    "type": "string"
-                },
-                "lastName": {
-                    "type": "string"
-                },
-                "location": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "nickName": {
-                    "type": "string"
-                },
-                "provider": {
-                    "type": "string"
-                },
-                "rawData": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
-                "refreshToken": {
-                    "type": "string"
-                },
-                "userID": {
-                    "type": "string"
-                }
-            }
-        },
         "server.helloWorldResponse": {
             "type": "object",
             "properties": {
@@ -313,6 +253,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "OAuth2ImplicitGoogle": {
+            "type": "oauth2",
+            "flow": "implicit",
+            "authorizationUrl": "/api/auth/google"
         }
     }
 }
